# book-llm-ai-app-dev

./: README.md  pyproject.toml
02장/: chapter_2_transformer_with_code.ipynb
03장/: chapter_3.ipynb
