[project]
name = "book-llm-ai-app-dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "accelerate==0.30.0",
    "datasets==2.19.0",
    "transformers==4.40.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
